--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -26,3 +26,22 @@ body
   box-shadow: insert 0 0 50px rdgba(0,0,0,.5);
 
 }
+.wave: before,
+.wave:  after
+{
+  content: '';
+  position: absolute;
+  width: 200%;
+  height: 200%;
+  top: 0;
+  left: 50%;
+  trsform: translate(-50%,-75%);
+  background: #000;
+}
+.wave: before
+{
+  border-radius: 45%;
+  background: rgba (255,255,255,1);
+  animation: animate 5% linear infinite;
+}
+.wave: after
